fixed some white space

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,6 +30,6 @@ body {
 main {
   background: white;
   margin: 0 auto;
-  padding-top: 140px;
+  padding-top: 96px;
   width: 450px;
 }
